<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#C1E0F7"
    tools:context=".Perfil">


    <Button
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#aeefec"
        android:text="Logout"
        android:background="@layout/esquinas_redondeadas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.748" />

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toEndOf="@+id/imagen_perfil"
        app:layout_constraintTop_toTopOf="@+id/imagen_perfil" />

    <TextView
        android:id="@+id/mail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        app:layout_constraintBottom_toBottomOf="@+id/imagen_perfil"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toBottomOf="@+id/name" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imagen_perfil"
        android:layout_width="96dp"
        android:layout_height="96dp"
        android:layout_marginTop="56dp"
        android:src="@drawable/common_google_signin_btn_icon_light_focused"
        app:civ_border_color="#FF000000"
        app:civ_border_width="2dp"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="300dp"
        android:layout_height="350dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <EditText
                android:id="@+id/edt_d"
                android:layout_width="300dp"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/nombre_d"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="italic" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_col"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/col_d"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/edt_pc"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/pc_d"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    android:textStyle="italic" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/edt_cd"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/cuidad_d"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    android:textStyle="italic" />

                <EditText
                    android:id="@+id/edt_est"
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/estad_d"
                    android:inputType="textPersonName"
                    android:textAlignment="center"
                    android:textStyle="italic" />
            </LinearLayout>

            <EditText
                android:id="@+id/edt_pais"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/pais_d"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textStyle="italic" />

            <Button
                android:id="@+id/button"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:layout_weight="1"

                android:backgroundTint="#aeefec"
                android:onClick="ir"
                android:text="@string/PbtnActualizar" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>