<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Productos">

    <TextView
        android:id="@+id/tv_p"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_marginTop="25dp"
        android:text="@string/titu_p"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="0dp"
        android:layout_height="600dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_p">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/iv1_p"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        app:srcCompat="@mipmap/lapiz" />

                    <ImageView
                        android:id="@+id/iv2_p"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        app:srcCompat="@mipmap/sharpener" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/iv3_p"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        app:srcCompat="@mipmap/eraser" />

                    <ImageView
                        android:id="@+id/iv4_p"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        app:srcCompat="@mipmap/clip" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/iv5_p"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        app:srcCompat="@mipmap/hocarta" />

                    <ImageView
                        android:id="@+id/iv6_p"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        app:srcCompat="@mipmap/mouse" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <ImageView
                        android:id="@+id/iv7_p"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        app:srcCompat="@mipmap/scissors" />

                    <ImageView
                        android:id="@+id/iv8_p"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        app:srcCompat="@mipmap/tinta" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" >

                    <ImageView
                        android:id="@+id/iv9_p"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        app:srcCompat="@mipmap/boli" />

                    <ImageView
                        android:id="@+id/iv10_p"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        app:srcCompat="@mipmap/postit" />
                </TableRow>

            </TableLayout>

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/boton_p"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="ir"
        android:text="@string/enviar_p"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:text="@string/fact"
        app:layout_constraintBottom_toBottomOf="@+id/boton_p"
        app:layout_constraintStart_toEndOf="@+id/boton_p"
        app:layout_constraintTop_toTopOf="@+id/boton_p" />


</androidx.constraintlayout.widget.ConstraintLayout>